--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 #      - run: npm i -g npm@6
       - run: npm i --force
       - run: npm install npm@latest -g
-      - run: npm install webpack-dev-server --save-dev
+#      - run: npm install webpack-dev-server --save-dev
       - run: npm run production
       # - run: npm test
       - name: Save state
